User johns
Thu Sep 23 20:56:18 CEST 2010

    Add man page.
    Update to doxygen 1.7.1. Documentation corrections.

Thu May 27 16:23:18 CEST 2010

    Added support to run on any X11 screen.
    Fixed bug: Initial (empty) content not shown correct.

Sun May 23 16:16:32 CEST 2010

    Code cleanup, removed unused code parts.
    Added wmdia.doxyfile to distribution.
    Tooltip font can be configured by a command line argument.
    New example script: show a single picture in wmdia.

Mon Jun 22 13:11:17 CEST 2009

    Added commandline argument for window name, to support multiple wmdias.
    Doxygen cleanups, Doxygen documentation generated.
    Fixed coredump, if connection to X isn't possible.
    Better handling, if none GIT version is build.

User johns
Mon May  4 14:11:54 CEST 2009

    Initial version.

---